--- a/djsr/frontend/templates/frontend/index.html
+++ b/djsr/frontend/templates/frontend/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'frontend/style.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
     <title>DRF + React = Winning the game</title>
 </head>
 <body>
